@@ -12,9 +12,9 @@ call ant -Dlanguage=gl all
 call ant -Dlanguage=eu instant-start
 call ant -Dlanguage=ia all
 call ant -Dlanguage=it all
-call ant -Dlanguage=ja html
+call ant -Dlanguage=ja html pdf-cjk
 call ant -Dlanguage=nl all
 call ant -Dlanguage=pt_BR instant-start
 call ant -Dlanguage=ru all
 call ant -Dlanguage=uk instant-start
-call ant -Dlanguage=zh_CN html
+call ant -Dlanguage=zh_CN html pdf-cjk
