@@ -1230,7 +1230,7 @@ OmegaT failed to load the valid ones
 ----------------------------------------------------------------------
  OmegaT 2.6.3 update 11
 ----------------------------------------------------------------------
-   2 Enhancements
+   3 Enhancements
    2 Bug fixes
    1 Localisation update
 ----------------------------------------------------------------------
@@ -1246,6 +1246,8 @@ compilation time, by putting an omegat.prefs file in /release/WebStart-specific
   - Specific user interface layout can be built into a Java Web Start package at
 compilation time, by putting an uiLayout.xml file in /release/WebStart-specific
 (backported from 3.1)
+
+  - Documentation can now be created as PDF for CJK languages
 
   Bug fixes: 
 
